# grouprec

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_POST_SUBMISSION.md  group_rec_inspector.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  leaderboard.yml
INSPECTOR/: index.html
concepts/: index.html
datasets/: index.html
design/: index.html
docs/: EXPLORER.md  INSPECTOR.md  concepts.md  datasets.md  design.md  evaluation.md  extending.md  group_rec_explorer.html  group_rec_inspector.html  index.md  integration.md  leaderboard.html  leaderboard.md  reproducibility.md  scaling.md
docs/papers/: demo.md
docs/stylesheets/: extra.css
evaluation/: index.html
examples/: leaderboard_app.py  sample_leaderboard.csv  showcase_leaderboard.csv
extending/: index.html
grouprec/: __init__.py  data.py  experiment.py  groups.py  pipeline.py  profile.py  profiling.py  references.py  split.py
grouprec/aggregators/: __init__.py  _normalize.py  base.py  fairness.py  sequential.py  social_choice.py
grouprec/backends/: __init__.py  _optional.py  adapters.py
grouprec/bench/: __init__.py  leaderboard.py  viz.py
grouprec/datasets/: __init__.py  cache.py  consrec.py  groupim_format.py  huggingface.py  loaders.py  preprocess.py  registry.py  yin.py
grouprec/eval/: __init__.py  _common.py  grouplevel.py  metrics.py  sampled.py  sequential.py
grouprec/inspector/: __init__.py  build.py
grouprec/models/: __init__.py  _sparse.py  agree.py  aligngroup.py  base.py  consrec.py  data.py  groupim.py  hhgr.py  hypergraph.py  ncf.py
integration/: index.html
leaderboard/: index.html
papers/demo/: index.html
reproducibility/: index.html
scaling/: index.html
scripts/: build_explorer.py  build_inspector.py  build_showcase.py  run_leaderboard.py
search/: search_index.json
tests/: test_backends.py  test_bench.py  test_citations.py  test_consrec_sampled.py  test_datasets.py  test_eval.py  test_eval_sequential.py  test_extras.py  test_fairness.py  test_groups.py  test_models.py  test_pipeline.py  test_sequential.py  test_social_choice.py  test_sparse.py
