[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grouprec"
version = "0.0.2"
description = "Group recommender systems for Python: results aggregation and profile aggregation as first-class citizens behind one API. Preference aggregation, group recommendation, fairness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Patrik Dokoupil", email = "patrik.dokoupil1996@gmail.com" }]
keywords = [
    "recommender-systems",
    "group-recommendation",
    "group-recommender-systems",
    "preference-aggregation",
    "collaborative-filtering",
    "fairness",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy", "scipy", "pandas", "platformdirs", "tqdm"]

[project.urls]
Homepage = "https://github.com/pdokoupil/grouprec"
Repository = "https://github.com/pdokoupil/grouprec"
Documentation = "https://pdokoupil.github.io/grouprec"
Issues = "https://github.com/pdokoupil/grouprec/issues"

[project.scripts]
grouprec-build-inspector = "grouprec.inspector.build:main"

[project.optional-dependencies]
torch = ["torch>=2.1"]
implicit = ["implicit"]
lenskit = ["lenskit"]
recbole = ["recbole"]    # backend adapter (experimental)
huggingface = ["datasets"]  # gr.datasets.from_huggingface(...)
ltp = ["ltp"]            # external package wrapping rlprop (optional sequential backend)
viz = ["matplotlib", "seaborn"]
demo = ["streamlit", "matplotlib"]          # lightweight leaderboard browser
full = ["grouprec[torch,implicit,lenskit,viz]"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
dev = ["pytest", "scikit-learn", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["grouprec"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E702: we use `a; b; c` deliberately for compact optimizer steps in training loops.
# E741: `I` (n_items), etc. are conventional in the recsys/ML code here.
ignore = ["E702", "E741"]
